--- a/dev_spring4/.classpath
+++ b/dev_spring4/.classpath
@@ -27,5 +27,6 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/spring-dao-2.0.8.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/cos-05Nov2002.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/mybatis-spring-2.0.6.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/ojdbc6.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
