--- a/demo0921/src/main/resources/application.properties
+++ b/demo0921/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.hikari.maximum-pool-size=12
 spring.datasource.hikari.ldle-timeout=300000
 spring.datasource.hikari.max-lifetime=1200000
 spring.datasource.hikari.auto-commit=true
-#MultipartRequest
+#MultipartRequest // \ucca8\ubd80\ud30c\uc77c \uad00\ub828\ub41c\uac83
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=20MB
